# my_reusable_django_app

./: README.md  pyproject.toml
my_reusable_django_app/: __init__.py  apps.py
