[tool.poetry]
name = "my-reusable-django-app"
version = "0.1.0"
description = ""
authors = ["turingnixstyx <naman.mishra194@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
